--- a/heroSection.css
+++ b/heroSection.css
@@ -13,7 +13,7 @@
 /* Step2: componentContainer */
 .heroContainer {
   /* background-color: #cbdc13; */
-  background-image: url(./assets/image/heroSection.jpg);
+  background-image: url(heroSection.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
